--- a/vision.html
+++ b/vision.html
@@ -8,14 +8,14 @@
   <title>Vision & Mission — Univrs.io</title>
   
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🍄</text></svg>">
+  <link rel="icon" type="image/png" href="assets/logo.png">
 </head>
 <body>
   <!-- Navigation -->
   <nav class="nav">
     <div class="nav__inner">
       <a href="/" class="nav__logo">
-        <span class="nav__logo-icon">🍄</span>
+        <span class="nav__logo-icon"><img src="assets/logo.png" alt="Univrs.io" style="width: 100%; height: 100%; object-fit: contain;"></span>
         Univrs.io
       </a>
       
@@ -272,7 +272,7 @@
     <div class="container">
       <div class="footer__grid">
         <div class="footer__brand">
-          <div class="footer__logo">🍄 Univrs.io</div>
+          <div class="footer__logo"><img src="assets/logo.png" alt="Univrs.io" style="width: 24px; height: 24px; vertical-align: middle; margin-right: 8px;">Univrs.io</div>
           <p class="footer__desc">Building regenerative digital infrastructure through mycelial economics. Systems of the people, by the people, for the people.</p>
         </div>
         
