--- a/collaborate.html
+++ b/collaborate.html
@@ -361,7 +361,7 @@
           <ul class="footer__links">
             <li><a href="roadmap.html">Roadmap</a></li>
             <li><a href="collaborate.html">Collaborate</a></li>
-            <li><a href="https://book.univrs.io" target="_blank">Documentation ↗</a></li>
+            <li><a href="https://book.univrs.io/docs/" target="_blank">Documentation ↗</a></li>
           </ul>
         </div>
         
