--- a/roadmap.html
+++ b/roadmap.html
@@ -311,7 +311,7 @@
                 piloting tools while advocating for publicly-funded cloud infrastructure.
               </p>
               <p>
-                The <a href="https://book.univrs.io" target="_blank">documentation site</a> contains extensive 
+                The <a href="https://book.univrs.io/docs/" target="_blank">documentation site</a> contains extensive 
                 technical material on distributed systems, Rust programming, and cloud-native patterns. 
                 This represents genuine investment in understanding the technologies required.
               </p>
@@ -376,7 +376,7 @@
           <ul class="footer__links">
             <li><a href="roadmap.html">Roadmap</a></li>
             <li><a href="collaborate.html">Collaborate</a></li>
-            <li><a href="https://book.univrs.io" target="_blank">Documentation ↗</a></li>
+            <li><a href="https://book.univrs.io/docs/" target="_blank">Documentation ↗</a></li>
           </ul>
         </div>
         
