--- a/evidence.html
+++ b/evidence.html
@@ -198,7 +198,7 @@
           environmental stewardship. Operating since 1971, pioneered midwifery, vegetarian nutrition, and 
           sustainable building in the US.
         </p>
-        <a href="https://thefarm.org" target="_blank" class="btn btn--ghost mt-md">thefarm.org →</a>
+        <a href="https://thefarmcommunity.com/" target="_blank" class="btn btn--ghost mt-md">thefarmcommunity.com →</a>
       </div>
       
       <div class="evidence-card">
