Add Nexus Initiative section to roadmap
New section covering:
- Open letter about decentralized infrastructure
- Working code status (DOL, ENR, P2P, VUDO, Identity, FedRAMP)
- Three deployment scenarios (Federal, State/Local, Community)
- Social-ready shareable excerpts
- Call to action

--- a/roadmap.html
+++ b/roadmap.html
@@ -457,6 +457,200 @@
     </div>
   </section>
 
+  <!-- NEXUS: Digital Commons Infrastructure Brief -->
+  <section class="container" id="nexus-dib" style="margin-top: var(--space-3xl); padding-top: var(--space-xl); border-top: 1px solid var(--border-subtle);">
+    <div class="section-header reveal">
+      <span class="tag" style="background: linear-gradient(135deg, var(--spore-purple), var(--glow-cyan)); color: #fff;">The Nexus Initiative</span>
+      <h2 class="mt-md" style="color: var(--text-primary);">An Open Letter on <span class="text-gradient">Decentralized Infrastructure</span></h2>
+      <p>A proposal for resilient government services that survive political cycles.</p>
+    </div>
+
+    <!-- Social-Ready Letter Format -->
+    <div class="reveal">
+      <div class="evidence-card" style="max-width: 900px; margin: 0 auto;">
+        <div style="font-family: var(--font-display); font-size: var(--text-sm); color: var(--glow-cyan); margin-bottom: var(--space-md);">
+          DECENTRALIZED INFRASTRUCTURE BRIEF — JANUARY 2026
+        </div>
+
+        <div class="prose" style="max-width: none;">
+          <h3 style="font-size: var(--text-2xl); margin-bottom: var(--space-lg); color: var(--text-primary);">
+            "Reform that depends on centralized power inherits the vulnerability of centralized power."
+          </h3>
+
+          <p style="font-size: var(--text-lg); color: var(--text-primary); font-style: italic; border-left: 3px solid var(--glow-gold); padding-left: var(--space-md); margin-bottom: var(--space-lg);">
+            Any solution dependent on a single election cycle inherits a fatal flaw: the next administration can reverse it. We propose a complementary approach—decentralized public infrastructure that delivers citizen-owned services resilient to political oscillation.
+          </p>
+
+          <h4 style="color: var(--glow-cyan); margin-top: var(--space-xl);">The Apollo Parallel</h4>
+          <p>
+            The Apollo program succeeded not because NASA was immune to politics, but because it created capabilities that outlasted any administration. Integrated circuits, satellite communications, and materials science became distributed across the private sector, academia, and international partners.
+          </p>
+          <p style="color: var(--text-primary); font-weight: 500;">
+            The <em>knowledge</em> was decentralized even as the <em>program</em> was centralized. Digital infrastructure requires the same approach.
+          </p>
+
+          <h4 style="color: var(--glow-cyan); margin-top: var(--space-xl);">The Mycelial Alternative</h4>
+          <p>
+            Infrastructure modeled on fungal networks—no central point of control, resources flowing based on need, decisions emerging from the network rather than from above.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Working Code Status -->
+    <div class="section-header reveal mt-xl" style="text-align: left;">
+      <span class="tag">Working Code</span>
+      <h3 class="mt-md" style="color: var(--text-primary);">Core Technical Components</h3>
+    </div>
+
+    <div class="grid grid--3 stagger-children">
+      <div class="card" style="border-top: 3px solid var(--glow-cyan);">
+        <h4 class="card__title" style="display: flex; align-items: center; gap: 0.5rem;">
+          <span style="width: 10px; height: 10px; background: var(--glow-cyan); border-radius: 50%;"></span>
+          DOL Language
+        </h4>
+        <code style="display: block; font-size: 0.75rem; color: var(--glow-cyan); background: rgba(0,255,136,0.05); padding: 0.5rem; border-radius: 4px; margin-bottom: 0.5rem;">522 tests passing</code>
+        <p class="card__text" style="font-size: 0.875rem;">Programming language where specifications <em>are</em> implementation</p>
+      </div>
+
+      <div class="card" style="border-top: 3px solid var(--glow-cyan);">
+        <h4 class="card__title" style="display: flex; align-items: center; gap: 0.5rem;">
+          <span style="width: 10px; height: 10px; background: var(--glow-cyan); border-radius: 50%;"></span>
+          ENR Credits
+        </h4>
+        <code style="display: block; font-size: 0.75rem; color: var(--glow-cyan); background: rgba(0,255,136,0.05); padding: 0.5rem; border-radius: 4px; margin-bottom: 0.5rem;">Types complete</code>
+        <p class="card__text" style="font-size: 0.875rem;">Credit system with entropy taxation, revival pools, gradient-based allocation</p>
+      </div>
+
+      <div class="card" style="border-top: 3px solid var(--glow-cyan);">
+        <h4 class="card__title" style="display: flex; align-items: center; gap: 0.5rem;">
+          <span style="width: 10px; height: 10px; background: var(--glow-cyan); border-radius: 50%;"></span>
+          P2P Network
+        </h4>
+        <code style="display: block; font-size: 0.75rem; color: var(--glow-cyan); background: rgba(0,255,136,0.05); padding: 0.5rem; border-radius: 4px; margin-bottom: 0.5rem;">Gossipsub operational</code>
+        <p class="card__text" style="font-size: 0.875rem;">Peer discovery, message propagation, distributed consensus</p>
+      </div>
+
+      <div class="card" style="border-top: 3px solid var(--glow-cyan);">
+        <h4 class="card__title" style="display: flex; align-items: center; gap: 0.5rem;">
+          <span style="width: 10px; height: 10px; background: var(--glow-cyan); border-radius: 50%;"></span>
+          VUDO VM
+        </h4>
+        <code style="display: block; font-size: 0.75rem; color: var(--glow-cyan); background: rgba(0,255,136,0.05); padding: 0.5rem; border-radius: 4px; margin-bottom: 0.5rem;">Integration tests passing</code>
+        <p class="card__text" style="font-size: 0.875rem;">Sandboxed execution of citizen-authored applications ("Spirits")</p>
+      </div>
+
+      <div class="card" style="border-top: 3px solid var(--glow-cyan);">
+        <h4 class="card__title" style="display: flex; align-items: center; gap: 0.5rem;">
+          <span style="width: 10px; height: 10px; background: var(--glow-cyan); border-radius: 50%;"></span>
+          Identity
+        </h4>
+        <code style="display: block; font-size: 0.75rem; color: var(--glow-cyan); background: rgba(0,255,136,0.05); padding: 0.5rem; border-radius: 4px; margin-bottom: 0.5rem;">Ed25519 implemented</code>
+        <p class="card__text" style="font-size: 0.875rem;">User-controlled keys, no central identity provider</p>
+      </div>
+
+      <div class="card" style="border-top: 3px solid var(--spore-purple);">
+        <h4 class="card__title" style="display: flex; align-items: center; gap: 0.5rem;">
+          <span style="width: 10px; height: 10px; background: var(--spore-purple); border-radius: 50%;"></span>
+          FedRAMP Ready
+        </h4>
+        <code style="display: block; font-size: 0.75rem; color: var(--spore-purple); background: rgba(176,136,249,0.1); padding: 0.5rem; border-radius: 4px; margin-bottom: 0.5rem;">18-month pathway</code>
+        <p class="card__text" style="font-size: 0.875rem;">Rust-based, reproducible builds, minimal dependencies</p>
+      </div>
+    </div>
+
+    <!-- Deployment Scenarios -->
+    <div class="section-header reveal mt-xl" style="text-align: left;">
+      <span class="tag tag--gold">Deployment Scenarios</span>
+      <h3 class="mt-md" style="color: var(--text-primary);">Three Paths to Adoption</h3>
+    </div>
+
+    <div class="grid grid--3 stagger-children">
+      <div class="card" style="border-left: 4px solid var(--glow-cyan);">
+        <span class="tag" style="margin-bottom: var(--space-sm);">Scenario A</span>
+        <h4 class="card__title">Full Federal Adoption</h4>
+        <p class="card__text">Government operates "Nexus" nodes providing high-availability backbone. Citizens connect through any node. Federal investment accelerates network growth while maintaining citizen sovereignty.</p>
+      </div>
+
+      <div class="card" style="border-left: 4px solid var(--glow-gold);">
+        <span class="tag tag--gold" style="margin-bottom: var(--space-sm);">Scenario B</span>
+        <h4 class="card__title">State/Local Pilot</h4>
+        <p class="card__text">Progressive states deploy regional infrastructure. Demonstrates feasibility, builds constituency for federal adoption. Interoperates with federal systems when/if they modernize.</p>
+      </div>
+
+      <div class="card" style="border-left: 4px solid var(--spore-purple);">
+        <span class="tag tag--purple" style="margin-bottom: var(--space-sm);">Scenario C</span>
+        <h4 class="card__title">Community Commons</h4>
+        <p class="card__text">Libraries, community colleges, and civic organizations operate nodes. Digital public utility emerges bottom-up. Government adoption becomes recognition of existing infrastructure.</p>
+      </div>
+    </div>
+
+    <!-- Social Media Shareable Excerpts -->
+    <div class="section-header reveal mt-xl" style="text-align: left;">
+      <span class="tag" style="background: linear-gradient(135deg, var(--glow-cyan), var(--glow-gold)); color: #fff;">Share the Vision</span>
+      <h3 class="mt-md" style="color: var(--text-primary);">Social-Ready Excerpts</h3>
+      <p style="font-size: var(--text-sm);">Copy these for social media posts</p>
+    </div>
+
+    <div class="grid grid--2 stagger-children">
+      <div class="quote" style="margin: 0;">
+        <p class="quote__text" style="font-size: var(--text-base);">"The network is greater than any node within it. Public digital infrastructure deserves the same resilience as the Apollo program's legacy."</p>
+        <cite class="quote__author">#DigitalCommons #DecentralizedInfrastructure</cite>
+      </div>
+
+      <div class="quote" style="margin: 0;">
+        <p class="quote__text" style="font-size: var(--text-base);">"What if communities owned their digital infrastructure the way they own their roads, libraries, and water systems?"</p>
+        <cite class="quote__author">#PublicCloud #DataSovereignty</cite>
+      </div>
+
+      <div class="quote" style="margin: 0;">
+        <p class="quote__text" style="font-size: var(--text-base);">"Sovereignty by Default: Every interaction begins with user-controlled cryptographic identity. Data residency is determined by the user, not the platform."</p>
+        <cite class="quote__author">#UserSovereignty #PrivacyByDesign</cite>
+      </div>
+
+      <div class="quote" style="margin: 0;">
+        <p class="quote__text" style="font-size: var(--text-base);">"If federal nodes go offline, state nodes continue. If state nodes fail, community nodes persist. If all institutional nodes vanish, peer-to-peer operation continues."</p>
+        <cite class="quote__author">#GracefulDegradation #Resilience</cite>
+      </div>
+    </div>
+
+    <!-- Call to Action -->
+    <div class="reveal mt-xl text-center">
+      <h4 style="margin-bottom: var(--space-md); color: var(--text-primary);">The Collaboration Proposal</h4>
+      <div class="grid grid--3" style="max-width: 900px; margin: 0 auto; gap: var(--space-md);">
+        <div class="card" style="text-align: center; padding: var(--space-md);">
+          <div style="font-size: 2rem; margin-bottom: var(--space-sm);">🔍</div>
+          <strong style="color: var(--glow-cyan);">Technical Review</strong>
+          <p class="card__text" style="font-size: 0.75rem; margin-top: var(--space-xs);">Evaluate architecture against service delivery requirements</p>
+        </div>
+        <div class="card" style="text-align: center; padding: var(--space-md);">
+          <div style="font-size: 2rem; margin-bottom: var(--space-sm);">📜</div>
+          <strong style="color: var(--glow-gold);">Policy Alignment</strong>
+          <p class="card__text" style="font-size: 0.75rem; margin-top: var(--space-xs);">Incorporate decentralized principles into reform recommendations</p>
+        </div>
+        <div class="card" style="text-align: center; padding: var(--space-md);">
+          <div style="font-size: 2rem; margin-bottom: var(--space-sm);">🤝</div>
+          <strong style="color: var(--spore-purple);">Talent Bridge</strong>
+          <p class="card__text" style="font-size: 0.75rem; margin-top: var(--space-xs);">Connect government technologists with contributor community</p>
+        </div>
+      </div>
+
+      <div class="mt-lg" style="display: flex; gap: var(--space-md); justify-content: center;">
+        <a href="https://github.com/univrs" target="_blank" class="btn btn--primary">View on GitHub →</a>
+        <a href="collaborate.html" class="btn btn--outline">Join the Movement</a>
+      </div>
+    </div>
+
+    <!-- Closing Quote -->
+    <div class="reveal mt-xl">
+      <blockquote class="quote" style="max-width: 700px; margin: 0 auto; text-align: center; border-left: none; border-top: 2px solid var(--glow-cyan); border-bottom: 2px solid var(--glow-gold); padding: var(--space-xl);">
+        <p class="quote__text" style="font-style: italic;">"Le réseau est Bondieu"</p>
+        <p style="color: var(--text-secondary); font-size: var(--text-sm); margin-bottom: var(--space-sm);">The network is greater than any node within it.</p>
+        <cite class="quote__author">— Univrs.io, January 2026</cite>
+      </blockquote>
+    </div>
+  </section>
+
   <!-- Policy Track -->
   <section class="container">
     <div class="section-header reveal">
